--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
     "lenis": "^1.0.45",
+    "lucide-react": "^0.515.0",
     "next": "14.2.3",
+    "nodemailer": "^7.0.3",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
+    "react-toastify": "^11.0.5",
     "sass": "^1.63.6"
   },
   "devDependencies": {
