--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "framer-motion": "^11.2.6",
